Fix padding on mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -203,7 +203,7 @@ main {
 
 @media (max-width: 555px) {
   main {
-    padding: 16px;
+    padding: 16px 16px 16px 24px;
 
     .header {
       .notifications-info {
